--- a/rosbridge_library/package.xml
+++ b/rosbridge_library/package.xml
@@ -3,17 +3,17 @@
 <package format="3">
   <name>rosbridge_library</name>
   <version>0.1.0</version>
-  <description>A TCP Server(Websocket part keeps update with https://github.com/RobotWebTools/rosbridge_suite) interface to rosbridge. And it is aimed at application on windows10 with Ros2 on it</description>
+  <description>The core rosbridge package, responsible for interpreting JSON andperforming the appropriate ROS action, like subscribe, publish, call service, and interact with params.</description>
   <maintainer email="gaojialong@nudt.edu.cn">Gao Geolone</maintainer>
   <license>BSD</license>
   <url type="website">http://ros.org/wiki/rosbridge_server</url>
   <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
   <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>
 
-  <OriginAuthor email="jonathan.c.mace@gmail.com">Jonathan Mace</OriginAuthor>
-  <Originmaintainer email="jihoonlee.in@gmail.com">Jihoon Lee</Originmaintainer>
-  <Originmaintainer email="jacob@foxglove.dev">Jacob Bandes-Storch</Originmaintainer>
-  
+  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
+  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
+  <maintainer email="jacob@foxglove.dev">Jacob Bandes-Storch</maintainer>
+
   <license>TODO: License declaration</license>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
   <build_depend>builtin_interfaces</build_depend>
