--- a/rosbridge_server/package.xml
+++ b/rosbridge_server/package.xml
@@ -10,9 +10,9 @@
   <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
   <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>
 
-  <OriginAuthor email="jonathan.c.mace@gmail.com">Jonathan Mace</OriginAuthor>
-  <Originmaintainer email="jihoonlee.in@gmail.com">Jihoon Lee</Originmaintainer>
-  <Originmaintainer email="jacob@foxglove.dev">Jacob Bandes-Storch</Originmaintainer>
+  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
+  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
+  <maintainer email="jacob@foxglove.dev">Jacob Bandes-Storch</maintainer>
 
 
 
